# near-sosmed-contracts

./: README.md
main-contract/: .gitignore  Cargo.toml  deploy.sh
main-contract/src/: lib.rs  post.rs  user.rs
messaging_feature/: Cargo.toml
messaging_feature/neardev/: dev-account  dev-account.env
messaging_feature/src/: lib.rs
post-feature/: Cargo.toml  deploy.sh
post-feature/res/: post_feature.wasm  rust_template.wasm
post-feature/src/: lib.rs
user_account/: .gitignore  Cargo.toml  deploy.sh
user_account/src/: lib.rs
